--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 
     <!-- Vendor CSS Files -->
 
+    <link rel="stylesheet" href="./assets/vendor/bootstrap-icons/font/bootstrap-icons.css">
 
     <!-- Style CSS File -->
-
+    <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 
@@ -47,29 +48,30 @@
 <body>
 
     <!-- ======= WisePanda.fr Header ======= -->
-    <header>
-        <div>
+    <header id="header" class="header fixed-top">
+        <div class="container-fluid d-flex align-items-center justify-content-between">
 
-            <a href="./index.html">
-                <img src="./assets/img/logo.svg" alt="">
+            <a href="./index.html" class="logo d-flex align-items-center me-auto me-lg-0">
+                <img src="./assets/img/logo.svg" alt="logo du site wisepanda.fr">
                 <h1>WisePanda.fr.<span>.</span><span>.</span></h1>
             </a>
             <!-- Start .navbar -->
-            <nav>
+            <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="./index.html#">Accueil </a></li>
-                    <li><a href="./index.html#about">Qui sommes-nous ? </a></li>
-                    <li><a href="./index.html#services">Nos cours</a></li>
-                    <li><a href="./index.html#portfolio">Portfolio</a></li>
-                    <li><a href="./index.html#team">Nos Membres</a></li>
-                    <li><a href="./index.html#contact">Contact</a></li>
-                    <li><a href="./page/blog.html">Blog</a></li>
+                    <li><a class="nav-link" href="./index.html#">Accueil </a></li>
+                    <li><a class="nav-link" href="./index.html#about">Qui sommes-nous ? </a></li>
+                    <li><a class="nav-link" href="./index.html#services">Nos cours</a></li>
+                    <li><a class="nav-link" href="./index.html#portfolio">Portfolio</a></li>
+                    <li><a class="nav-link" href="./index.html#team">Nos Membres</a></li>
+                    <li><a class="nav-link" href="./index.html#contact">Contact</a></li>
+                    <!-- <li><a class="nav-link" href="./page/blog.html">Blog</a></li> -->
                 </ul>
-                <i></i>
+                <!-- Mobile toggle button -->
+                <i class="bi bi-list mobile-nav-toggle d-none"></i>
             </nav>
             <!-- End .navbar -->
 
-            <a href="#contact">Inscription</a>
+            <a class="btn--contact" href="#contact">Inscription</a>
 
         </div>
     </header>
@@ -1620,7 +1622,7 @@
 
     <!-- Vendor JS Files -->
 
-
+    <script src="./assets/js/main.js"></script>
     <!-- Main JS File -->
 
 
