--- a/index.html
+++ b/index.html
@@ -78,63 +78,65 @@
     <!-- End Header -->
 
     <!-- ======= WisePanda.fr Hero Banner ======= -->
-    <section>
-        <div>
-            <img src="./assets/img/hero-banner/hero-banner-1.png">
+    <section id="hero-animated" class="hero-animated d-flex align-items-center">
+        <div
+            class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
+            <img src="./assets/img/hero-banner/hero-banner-1.png" class="img-fluid animated">
             <h2><span>WisePanda.fr</span> <br> Votre solution d'apprentissage</h2>
             <p>Formez-vous sur le web en un simple clique !</p>
-            <div>
-                <a href="#contact">Inscription</a>
-                <a href="https://youtu.be/6GHxRzq5Dk0"><i></i><span>Regardez la vidéo</span></a>
+            <div class="d-flex">
+                <a class="btn--hero-contact" href="#contact">Inscription</a>
+                <a class="btn--watch-video d-flex align-items-center" href="https://youtu.be/6GHxRzq5Dk0">
+                    <i class="bi bi-play-circle"></i><span>Regardez la vidéo</span></a>
             </div>
         </div>
     </section>
     <!-- End Hero banner -->
 
     <!-- ======= WisePanda.fr Main Content ======= -->
-    <main>
+    <main id="main">
 
         <!-- =======  WisePanda.fr Featured Services Section ======= -->
-        <section>
-            <div>
+        <section id="featured-services" class="featured-services">
+            <div class="container">
 
                 <!-- Start Row Featured Service Items -->
-                <div>
+                <div class="row gy-4">
                     <!-- Start Service Item 1 -->
-                    <div>
-                        <div>
-                            <div><i></i></div>
-                            <h4><a href="">Formation Webmarketing</a></h4>
+                    <div class="col-xl-3 col-md-6 d-flex">
+                        <div class="service-item position-relative">
+                            <div class="icon"><i class="bi bi-activity icon"></i></div>
+                            <h4><a class="streched-link" href="">Formation Webmarketing</a></h4>
                             <p>Nous aidons votre entreprise à optimiser sa présence numérique</p>
                         </div>
                     </div>
                     <!-- End Service Item -->
 
                     <!-- Start Service Item 2 -->
-                    <div>
-                        <div>
-                            <div><i></i></div>
-                            <h4><a href=""> Formation Référencement</a></h4>
+                    <div class="col-xl-3 col-md-6 d-flex">
+                        <div class="service-item position-relative">
+                            <div class="icon"><i class="bi bi-bounding-box-circles icon"></i></div>
+                            <h4><a class="streched-link" href=""> Formation Référencement</a></h4>
                             <p>Devenez visible dans les résultats des moteurs de recherche.</p>
                         </div>
                     </div>
                     <!-- End Service Item -->
 
                     <!-- Start Service Item 3 -->
-                    <div>
-                        <div>
-                            <div><i></i></div>
-                            <h4><a href="">Formation Frontend</a></h4>
+                    <div class="col-xl-3 col-md-6 d-flex">
+                        <div class="service-item position-relative">
+                            <div class="icon"><i class="bi bi-code-square icon"></i></div>
+                            <h4><a class="streched-link" href="">Formation Frontend</a></h4>
                             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                         </div>
                     </div>
                     <!-- End Service Item -->
 
                     <!-- Start Service Item 4 -->
-                    <div>
-                        <div>
-                            <div><i></i></div>
-                            <h4><a href="">Formation WordPress</a></h4>
+                    <div class="col-xl-3 col-md-6 d-flex">
+                        <div class="service-item position-relative">
+                            <div class="icon"><i class="bi bi-wordpress icon"></i></div>
+                            <h4><a class="streched-link" href="">Formation WordPress</a></h4>
                             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                         </div>
                     </div>
@@ -1622,9 +1624,9 @@
 
     <!-- Vendor JS Files -->
 
-    <script src="./assets/js/main.js"></script>
+  
     <!-- Main JS File -->
-
+    <script src="./assets/js/main.js"></script>
 
 </body>
 
