add about section

--- a/index.html
+++ b/index.html
@@ -150,56 +150,56 @@
         <!-- End Featured Services Section -->
 
         <!-- ======= WisePanda.fr About Section ======= -->
-        <section>
-            <div>
+        <section id="about" class="about">
+            <div class="container">
 
-                <div>
+                <div class="section-header">
                     <h2>Qui sommes-nous ?</h2>
                     <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam
                         voluptas
                         asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p>
                 </div>
 
-                <div>
+                <div class="row g-4 gy-lg-5">
 
-                    <div>
-                        <div>
-                            <img src="./assets/img/about/about.jpg" alt="">
+                    <div class="col-lg-5">
+                        <div class="about__img">
+                            <img src="./assets/img/about/about.jpg" class="img-fluid" alt="image about">
                         </div>
                     </div>
 
-                    <div>
-                        <h3>Neque officiis dolore maiores et exercitationem quae est seda lidera
+                    <div class="col-lg-7">
+                        <h3 class="pt-0 pt-lg-5">Neque officiis dolore maiores et exercitationem quae est seda lidera
                             pat claero
                         </h3>
 
                         <!-- Start Tabs -->
-                        <ul>
-                            <li><a href="">Exemple A</a></li>
-                            <li><a href="">Exemple B</a></li>
-                            <li><a href="">Exemple C</a></li>
+                        <ul class="nav nav-pills mb-3">
+                            <li><a class="nav-link active" data-bs-toggle="pill"  href="#tab1">Exemple A</a></li>
+                            <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">Exemple B</a></li>
+                            <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">Exemple C</a></li>
                         </ul>
                         <!-- End Tabs -->
 
                         <!-- Tab Content -->
-                        <div>
+                        <div class="tab-content">
 
-                            <div>
+                            <div class="tab-pane fade show active" id="tab1">
 
-                                <p>Consequuntur inventore voluptates consequatur aut vel et. Eos
+                                <p class="fst-italic">1Consequuntur inventore voluptates consequatur aut vel et. Eos
                                     doloribus expedita.
                                     Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
 
-                                <div>
-                                    <i></i>
+                                <div class="d-flex align-items-center mt-4">
+                                    <i class="bi bi-check2"></i>
                                     <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
                                 </div>
                                 <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi
                                     dolorum non
                                     eveniet magni quaerat nemo et.</p>
 
-                                <div>
-                                    <i></i>
+                                <div class="d-flex align-items-center mt-4">
+                                    <i  class="bi bi-check2"></i>
                                     <h4>Incidunt non veritatis illum ea ut nisi</h4>
                                 </div>
                                 <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta
@@ -208,8 +208,8 @@
                                     tempora. Quia et
                                     perferendis.</p>
 
-                                <div>
-                                    <i></i>
+                                <div class="d-flex align-items-center mt-4">
+                                    <i  class="bi bi-check2"></i>
                                     <h4>Omnis ab quia nemo dignissimos rem eum quos..</h4>
                                 </div>
                                 <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam
@@ -221,22 +221,22 @@
                             </div>
                             <!-- End Tab 1 Content -->
 
-                            <div>
+                            <div class="tab-pane fade show" id="tab2">
 
-                                <p>Consequuntur inventore voluptates consequatur aut vel et. Eos
+                                <p class="fst-italic">2Consequuntur inventore voluptates consequatur aut vel et. Eos
                                     doloribus expedita.
                                     Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
 
-                                <div>
-                                    <i></i>
+                                <div class="d-flex align-items-center mt-4">
+                                    <i class="bi bi-check2"></i>
                                     <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
                                 </div>
                                 <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi
                                     dolorum non
                                     eveniet magni quaerat nemo et.</p>
 
-                                <div>
-                                    <i></i>
+                                <div class="d-flex align-items-center mt-4">
+                                    <i  class="bi bi-check2"></i>
                                     <h4>Incidunt non veritatis illum ea ut nisi</h4>
                                 </div>
                                 <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta
@@ -245,8 +245,8 @@
                                     tempora. Quia et
                                     perferendis.</p>
 
-                                <div>
-                                    <i></i>
+                                <div class="d-flex align-items-center mt-4">
+                                    <i  class="bi bi-check2"></i>
                                     <h4>Omnis ab quia nemo dignissimos rem eum quos..</h4>
                                 </div>
                                 <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam
@@ -258,22 +258,22 @@
                             </div>
                             <!-- End Tab 2 Content -->
 
-                            <div>
+                            <div class="tab-pane fade show" id="tab3">
 
-                                <p>Consequuntur inventore voluptates consequatur aut vel et. Eos
+                                <p class="fst-italic">3Consequuntur inventore voluptates consequatur aut vel et. Eos
                                     doloribus expedita.
                                     Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
 
-                                <div>
-                                    <i></i>
+                                <div class="d-flex align-items-center mt-4">
+                                    <i class="bi bi-check2"></i>
                                     <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
                                 </div>
                                 <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi
                                     dolorum non
                                     eveniet magni quaerat nemo et.</p>
 
-                                <div>
-                                    <i></i>
+                                <div class="d-flex align-items-center mt-4">
+                                    <i  class="bi bi-check2"></i>
                                     <h4>Incidunt non veritatis illum ea ut nisi</h4>
                                 </div>
                                 <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta
@@ -282,8 +282,8 @@
                                     tempora. Quia et
                                     perferendis.</p>
 
-                                <div>
-                                    <i></i>
+                                <div class="d-flex align-items-center mt-4">
+                                    <i  class="bi bi-check2"></i>
                                     <h4>Omnis ab quia nemo dignissimos rem eum quos..</h4>
                                 </div>
                                 <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam
@@ -1624,7 +1624,7 @@
 
     <!-- Vendor JS Files -->
 
-  
+  <script src="./assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- Main JS File -->
     <script src="./assets/js/main.js"></script>
 
