add clients section

--- a/index.html
+++ b/index.html
@@ -306,26 +306,26 @@
         <!-- End About Section -->
 
         <!-- ======= WisePanda.fr Clients Section ======= -->
-        <section>
-            <div>
+        <section id="clients" class="clients">
+            <div class="container">
 
-                <div>
-                    <div>
-                        <div><img src="./assets/img/clients/client-1.png" alt="">
+                <div class="clients__slider swiper">
+                    <div class="swiper-wrapper align-items-center">
+                        <div class="swiper-slide"><img src="./assets/img/clients/client-1.png" class="img-fluid" alt="image client1">
                         </div>
-                        <div><img src="./assets/img/clients/client-2.png" alt="">
+                        <div class="swiper-slide"><img src="./assets/img/clients/client-2.png" class="img-fluid" alt="image client2">
                         </div>
-                        <div><img src="./assets/img/clients/client-3.png" alt="">
+                        <div class="swiper-slide"><img src="./assets/img/clients/client-3.png" class="img-fluid" alt="image client3">
                         </div>
-                        <div><img src="./assets/img/clients/client-4.png" alt="">
+                        <div class="swiper-slide"><img src="./assets/img/clients/client-4.png" class="img-fluid" alt="image client4">
                         </div>
-                        <div><img src="./assets/img/clients/client-5.png" alt="">
+                        <div class="swiper-slide"><img src="./assets/img/clients/client-5.png" class="img-fluid" alt="image client5">
                         </div>
-                        <div><img src="./assets/img/clients/client-6.png" alt="">
+                        <div class="swiper-slide"><img src="./assets/img/clients/client-6.png" class="img-fluid" alt="image client6">
                         </div>
-                        <div><img src="./assets/img/clients/client-7.png" alt="">
+                        <div class="swiper-slide"><img src="./assets/img/clients/client-7.png" class="img-fluid" alt="image client7">
                         </div>
-                        <div><img src="./assets/img/clients/client-8.png" alt="">
+                        <div class="swiper-slide"><img src="./assets/img/clients/client-8.png" class="img-fluid" alt="image client8">
                         </div>
                     </div>
                 </div>
