--- a/index.html
+++ b/index.html
@@ -335,24 +335,24 @@
         <!-- End Clients Section -->
 
         <!-- ======= WisePanda.fr Call To Action Section ======= -->
-        <section>
-            <div>
+        <section id="cta" class="cta">
+            <div class="container">
 
-                <div>
+                <div class="row g-5">
 
-                    <div>
+                    <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
                         <h3>Votre Formation sur <em>Mesure</em> dès maintenant</h3>
                         <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                             pariatur.
                             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
                             anim id est
                             laborum.</p>
-                        <a href="#">Commencez</a>
+                        <a class="btn--cta align-self-start" href="#">Commencez</a>
                     </div>
 
-                    <div>
-                        <div>
-                            <img src="./assets/img/cta/cta.jpg" alt="">
+                    <div class="col-lg-4 col-md-6 order-first order-md-last d-flex align-items-center">
+                        <div class="img__cta">
+                            <img src="./assets/img/cta/cta.jpg" class="img-fluid" alt="student photo">
                         </div>
                     </div>
 
