add onfocus section

--- a/index.html
+++ b/index.html
@@ -363,34 +363,34 @@
         <!-- End Call To Action Section -->
 
         <!-- ======= On Focus Section ======= -->
-        <section>
-            <div>
+        <section id="onfocus" class="onfocus">
+            <div class="container-fluid p-0">
 
-                <div>
-                    <div>
-                        <a href="https://youtu.be/dqT-UlYlg1s"></a>
+                <div class="row g-0">
+                    <div class="col-lg-6 video-play position-relative">
+                        <a href="https://youtu.be/dqT-UlYlg1s" class="btn--play"></a>
                     </div>
-                    <div>
-                        <div>
+                    <div class="col-lg-6">
+                        <div class="content d-flex flex-column justify-content-center h-100">
                             <h3>Vous formation dans nos locaux</h3>
-                            <p>
+                            <p class="fst-italic">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut labore et
                                 dolore
                                 magna aliqua.
                             </p>
                             <ul>
-                                <li><i></i> Ullamco laboris nisi ut aliquip ex ea commodo
+                                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo
                                     consequat.</li>
-                                <li><i></i> Duis aute irure dolor in reprehenderit in
+                                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in
                                     voluptate velit.</li>
-                                <li><i></i> Ullamco laboris nisi ut aliquip ex ea commodo
+                                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo
                                     consequat. Duis
                                     aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore
                                     eu fugiat nulla
                                     pariatur.</li>
                             </ul>
-                            <a href="#"><span>En savoir plus</span><i></i></a>
+                            <a href="#" class="btn--read-more align-self-start"><span>En savoir plus</span><i class="bi bi-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
